# oz-union-be-14-team1

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  signup_test.sh
.github/workflows/: checks.yml  deploy.yml  discord-notifications.yml
apps/ai/: apps.py  models.py  pydantics.py  serializers.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
apps/ai/exceptions/: ai_exceptions.py
apps/ai/migrations/: 0001_initial.py  0002_remove_gamereviewsummary_is_deleted_and_more.py  0002_usertendency.py  0003_alter_usertendency_table.py  0004_alter_usertendency_tendency.py
apps/ai/models/: __init__.py  game_review_summary.py  user_tendency.py
apps/ai/pydantics/: user_tendency.py
apps/ai/services/: review_summary_service.py  user_tendency.py  user_tendency_service.py
apps/ai/signals/: __init__.py  review_summary.py  user_tendency.py
apps/ai/tasks/: __init__.py  review_summary.py  user_tendency.py
apps/ai/tests/: test_api.py  test_profanity.py  test_service.py
apps/ai/views/: review_summary_view.py  user_tendency_view.py
apps/community/: apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
apps/community/exceptions/: review_exceptions.py
apps/community/migrations/: 0001_initial.py  0002_initial.py  0003_reviewlike.py  0004_remove_review_idx_reviews_best_and_more.py  0005_remove_review_idx_reviews_best_and_more.py  0006_reviewcomment.py
apps/community/models/: __init__.py  comments.py  review_like.py  reviews.py
apps/community/permissions/: review_permissions.py
apps/community/selectors/: comment_selector.py  review_comment_selector.py  review_selector.py
apps/core/: models.py  utils.py
apps/game/: urls.py
apps/game/models/: game.py  (+11 more)
apps/preference/: apps.py  urls.py  views.py
apps/user/: urls.py
config/: celery.py  settings.py  urls.py
nginx/: Dockerfile  nginx.conf
static/: swagger.yaml
(+163 files in other folders)
